--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="multiplication-client.js"></script>
 </head>
+
 <body>
 <div>
     <h1>Welcome to Social Multiplication</h1>
@@ -21,6 +22,16 @@
     </form>
     </p>
     <h2><span class="result-message"></span></h2>
+    <h2>Stats</h2>
+    <table id="stats" style="width:100%">
+        <tr>
+            <th>Attempt ID</th>
+            <th>Multiplication</th>
+            <th>You entered</th>
+            <th>Correct?</th>
+        </tr>
+        <tbody id="stats-body"></tbody>
+    </table>
 </div>
 </body>
 </html>
